--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
           </button>
         </div>
         <div class="panel-body output-body">
+          <canvas id="turtle-canvas" class="turtle-canvas"></canvas>
           <div class="output-content" id="output-content">
             <div class="output-placeholder">
               <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
@@ -139,6 +140,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/addon/edit/closebrackets.min.js"></script>
 
   <!-- JS -->
+  <script src="js/turtle-canvas.js"></script>
   <script src="js/examples.js"></script>
   <script src="js/editor.js"></script>
   <script src="js/runner.js"></script>
